unpackaged/main/default/objects/SPARTADMS__Document_Number_Config__c/SPARTADMS__Document_Number_Config__c.object-meta.xml
<CustomObject>
    <label>Document Number Config</label>
    <nameField>
        <label>Abbreviation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Number Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>