unpackaged/main/default/objects/SPARTADMS__Document_Number_Config__c/fields/SPARTADMS__Is_Active__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Active</description>
        <inlineHelpText>Is Active</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>