unpackaged/main/default/objects/SPARTADMS__Document_Number_Config__c/fields/SPARTADMS__Level__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Level__c</fullName>
        <description>Level</description>
        <inlineHelpText>Level</inlineHelpText>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>