unpackaged/main/default/objects/SPARTADMS__Document_Number_Config__c/fields/SPARTADMS__Name__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Name__c</fullName>
        <description>Field description</description>
        <inlineHelpText>Field description</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>