unpackaged/main/default/objects/SPARTADMS__Document_Number_Config__c/fields/SPARTADMS__Parent__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Number Config</label>
        <referenceTo>SPARTADMS__Document_Number_Config__c</referenceTo>
        <relationshipLabel>Document Number Configs</relationshipLabel>
        <relationshipName>Document_Number_Configs</relationshipName>
        <type>Lookup</type>
    </CustomField>